; ModuleID = '/home/carl/AnghaBench/linux/fs/ubifs/extr_xattr.c_xattr_get.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ubifs/extr_xattr.c_xattr_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xattr_handler = type { i32 }
%struct.dentry = type { i32 }
%struct.inode = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"xattr '%s', ino %lu ('%pd'), buf size %zd\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xattr_handler*, %struct.dentry*, %struct.inode*, i8*, i8*, i64)* @xattr_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xattr_get(%struct.xattr_handler* %0, %struct.dentry* %1, %struct.inode* %2, i8* %3, i8* %4, i64 %5) #0 {
  %7 = alloca %struct.xattr_handler*, align 8
  %8 = alloca %struct.dentry*, align 8
  %9 = alloca %struct.inode*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store %struct.xattr_handler* %0, %struct.xattr_handler** %7, align 8
  store %struct.dentry* %1, %struct.dentry** %8, align 8
  store %struct.inode* %2, %struct.inode** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %13 = load i8*, i8** %10, align 8
  %14 = load %struct.inode*, %struct.inode** %9, align 8
  %15 = getelementptr inbounds %struct.inode, %struct.inode* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.dentry*, %struct.dentry** %8, align 8
  %18 = load i64, i64* %12, align 8
  %19 = call i32 @dbg_gen(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %13, i32 %16, %struct.dentry* %17, i64 %18)
  %20 = load %struct.xattr_handler*, %struct.xattr_handler** %7, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = call i8* @xattr_full_name(%struct.xattr_handler* %20, i8* %21)
  store i8* %22, i8** %10, align 8
  %23 = load %struct.inode*, %struct.inode** %9, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = load i64, i64* %12, align 8
  %27 = call i32 @ubifs_xattr_get(%struct.inode* %23, i8* %24, i8* %25, i64 %26)
  ret i32 %27
}

declare dso_local i32 @dbg_gen(i8*, i8*, i32, %struct.dentry*, i64) #1

declare dso_local i8* @xattr_full_name(%struct.xattr_handler*, i8*) #1

declare dso_local i32 @ubifs_xattr_get(%struct.inode*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
